infra/cdk.out/vpc-omero-dev.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/Resource"
   }
  },
  "VpcomerodevpublicSubnet1SubnetC012CCF1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "omero-dev-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1/Subnet"
   }
  },
  "VpcomerodevpublicSubnet1RouteTableDAE1EAD5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1/RouteTable"
   }
  },
  "VpcomerodevpublicSubnet1RouteTableAssociation7B231C75": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcomerodevpublicSubnet1RouteTableDAE1EAD5"
    },
    "SubnetId": {
     "Ref": "VpcomerodevpublicSubnet1SubnetC012CCF1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcomerodevpublicSubnet1DefaultRouteA7B10CCB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcomerodevpublicSubnet1RouteTableDAE1EAD5"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1/DefaultRoute"
   }
  },
  "VpcomerodevpublicSubnet1EIP383EB2DB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1/EIP"
   }
  },
  "VpcomerodevpublicSubnet1NATGateway55BA8042": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcomerodevpublicSubnet1EIP383EB2DB",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcomerodevpublicSubnet1SubnetC012CCF1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcomerodevpublicSubnet1DefaultRouteA7B10CCB",
    "VpcomerodevpublicSubnet1RouteTableAssociation7B231C75"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet1/NATGateway"
   }
  },
  "VpcomerodevpublicSubnet2Subnet1953E842": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "omero-dev-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet2/Subnet"
   }
  },
  "VpcomerodevpublicSubnet2RouteTableE2818E9C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet2/RouteTable"
   }
  },
  "VpcomerodevpublicSubnet2RouteTableAssociation02B21CF4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcomerodevpublicSubnet2RouteTableE2818E9C"
    },
    "SubnetId": {
     "Ref": "VpcomerodevpublicSubnet2Subnet1953E842"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcomerodevpublicSubnet2DefaultRoute74F4C1BA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcomerodevpublicSubnet2RouteTableE2818E9C"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-publicSubnet2/DefaultRoute"
   }
  },
  "VpcomerodevprivateSubnet1Subnet1B11EE6D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "omero-dev-private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet1/Subnet"
   }
  },
  "VpcomerodevprivateSubnet1RouteTable3F6D4388": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet1/RouteTable"
   }
  },
  "VpcomerodevprivateSubnet1RouteTableAssociation07FA4F02": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcomerodevprivateSubnet1RouteTable3F6D4388"
    },
    "SubnetId": {
     "Ref": "VpcomerodevprivateSubnet1Subnet1B11EE6D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet1/RouteTableAssociation"
   }
  },
  "VpcomerodevprivateSubnet1DefaultRoute686D51D4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcomerodevpublicSubnet1NATGateway55BA8042"
    },
    "RouteTableId": {
     "Ref": "VpcomerodevprivateSubnet1RouteTable3F6D4388"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet1/DefaultRoute"
   }
  },
  "VpcomerodevprivateSubnet2Subnet87C1EE89": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "omero-dev-private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet2/Subnet"
   }
  },
  "VpcomerodevprivateSubnet2RouteTableF0F2D411": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet2/RouteTable"
   }
  },
  "VpcomerodevprivateSubnet2RouteTableAssociation53BCF1B1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcomerodevprivateSubnet2RouteTableF0F2D411"
    },
    "SubnetId": {
     "Ref": "VpcomerodevprivateSubnet2Subnet87C1EE89"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet2/RouteTableAssociation"
   }
  },
  "VpcomerodevprivateSubnet2DefaultRouteB20AC0B6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcomerodevpublicSubnet1NATGateway55BA8042"
    },
    "RouteTableId": {
     "Ref": "VpcomerodevprivateSubnet2RouteTableF0F2D411"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-privateSubnet2/DefaultRoute"
   }
  },
  "VpcomerodevisolatedSubnet1Subnet0DA58240": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "omero-dev-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet1/Subnet"
   }
  },
  "VpcomerodevisolatedSubnet1RouteTable25F64299": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet1/RouteTable"
   }
  },
  "VpcomerodevisolatedSubnet1RouteTableAssociation12540FE7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcomerodevisolatedSubnet1RouteTable25F64299"
    },
    "SubnetId": {
     "Ref": "VpcomerodevisolatedSubnet1Subnet0DA58240"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet1/RouteTableAssociation"
   }
  },
  "VpcomerodevisolatedSubnet2SubnetF2968B1D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "omero-dev-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet2/Subnet"
   }
  },
  "VpcomerodevisolatedSubnet2RouteTable06DECF33": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet2/RouteTable"
   }
  },
  "VpcomerodevisolatedSubnet2RouteTableAssociation8E3A1FED": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcomerodevisolatedSubnet2RouteTable06DECF33"
    },
    "SubnetId": {
     "Ref": "VpcomerodevisolatedSubnet2SubnetF2968B1D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/omero-dev-isolatedSubnet2/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-omero-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/Vpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOzQqDMBCEn8V7TG0ovYuU4qUVLV7LGrc0/iRiNkoR371Yi55m5mMYRnBxOvPAg9H6sqz9RhV8yghkzWC0T5SCT3knWfTSeRKxxBWNkpkrNNLCdpcaR/iAosGd7yy01kgFpIzeyou5xMkiN6ArEI7wYUmvBiDch2NN2GvcCuuTfwqJQL5b1DSzFK1xvfzt3h11jmamTYm8sodBCC6OPPAqq5TfO02qRZ6u+gXNsj29BAEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "vpc-omero-dev/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "omero-dev-vpc-id"
   }
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "vpc-omero-dev:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefVpcomerodevprivateSubnet1Subnet1B11EE6D3AB31238": {
   "Value": {
    "Ref": "VpcomerodevprivateSubnet1Subnet1B11EE6D"
   },
   "Export": {
    "Name": "vpc-omero-dev:ExportsOutputRefVpcomerodevprivateSubnet1Subnet1B11EE6D3AB31238"
   }
  },
  "ExportsOutputRefVpcomerodevprivateSubnet2Subnet87C1EE897263451F": {
   "Value": {
    "Ref": "VpcomerodevprivateSubnet2Subnet87C1EE89"
   },
   "Export": {
    "Name": "vpc-omero-dev:ExportsOutputRefVpcomerodevprivateSubnet2Subnet87C1EE897263451F"
   }
  },
  "ExportsOutputRefVpcomerodevpublicSubnet1SubnetC012CCF12183E340": {
   "Value": {
    "Ref": "VpcomerodevpublicSubnet1SubnetC012CCF1"
   },
   "Export": {
    "Name": "vpc-omero-dev:ExportsOutputRefVpcomerodevpublicSubnet1SubnetC012CCF12183E340"
   }
  },
  "ExportsOutputRefVpcomerodevpublicSubnet2Subnet1953E842571B3B71": {
   "Value": {
    "Ref": "VpcomerodevpublicSubnet2Subnet1953E842"
   },
   "Export": {
    "Name": "vpc-omero-dev:ExportsOutputRefVpcomerodevpublicSubnet2Subnet1953E842571B3B71"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
